tenants/hedgedoc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
  namespace: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      containers:
        - name: hedgedoc
          image: quay.io/hedgedoc/hedgedoc:1.10.3
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads
              mountPath: /hedgedoc/public/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: hedgedoc-uploads
