tenants/hedgedoc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
  namespace: hedgedoc
spec:
  selector:
    app: hedgedoc
  ports:
    - port: 3000
      targetPort: 3000
